--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
