--- a/.github/workflows/host.yml
+++ b/.github/workflows/host.yml
@@ -37,8 +37,8 @@ jobs:
                   cache: "npm"
             - name: Install dependencies
               run: npm install
-            - name: Build
-              run: npm run build
+            - name: Build and test
+              run: npm run test
             - name: Setup Pages
               uses: actions/configure-pages@v3
             - name: Upload artifact
