--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "tsc && vite build && jest"
   },
   "dependencies": {
     "@types/node": "^18.15.11",
@@ -17,12 +18,15 @@
     "safety-match": "^0.4.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
     "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
