--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "react-weather",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "tsc && vite build && jest"
-  },
-  "dependencies": {
-    "@types/node": "^18.15.11",
-    "openweathermap-ts": "^1.2.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-loading-icons": "^1.1.0",
-    "safety-match": "^0.4.4"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "autoprefixer": "^10.4.14",
-    "jest": "^29.5.0",
-    "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
-  }
+    "name": "react-weather",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "test": "tsc && vite build && jest"
+    },
+    "dependencies": {
+        "@types/node": "^18.15.11",
+        "openweathermap-ts": "^1.2.10",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-loading-icons": "^1.1.0",
+        "safety-match": "^0.4.4"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.1",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@vitejs/plugin-react": "^3.1.0",
+        "@vitejs/plugin-react-swc": "^3.0.0",
+        "autoprefixer": "^10.4.14",
+        "jest": "^29.5.0",
+        "jest-localstorage-mock": "^2.4.26",
+        "tailwindcss": "^3.3.2",
+        "ts-jest": "^29.1.0",
+        "typescript": "^4.9.3",
+        "vite": "^4.2.0"
+    }
 }
