--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-loading-icons": "^1.1.0",
-        "safety-match": "^0.4.4"
+        "safety-match": "^0.4.4",
+        "styled-components": "^5.3.10",
+        "styled-icons": "^10.47.0"
     },
     "devDependencies": {
         "@types/jest": "^29.5.1",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "@types/styled-components": "^5.1.26",
         "@vitejs/plugin-react": "^3.1.0",
         "@vitejs/plugin-react-swc": "^3.0.0",
         "autoprefixer": "^10.4.14",
