--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     },
     "dependencies": {
         "@fluentui/react-icons": "^2.0.201",
+        "@tanstack/react-query": "^4.29.5",
+        "@tanstack/react-query-devtools": "^4.29.6",
         "@types/node": "^18.15.11",
         "openweathermap-ts": "^1.2.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-loading-icons": "^1.1.0",
-        "safety-match": "^0.4.4"
+        "react-loading-icons": "^1.1.0"
     },
     "devDependencies": {
         "@types/jest": "^29.5.1",
