--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@fluentui/react-icons": "^2.0.201",
         "@tanstack/react-query": "^4.29.5",
+        "dotenv": "^16.0.3",
         "openweathermap-ts": "^1.2.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
