--- a/.github/workflows/host.yml
+++ b/.github/workflows/host.yml
@@ -37,15 +37,17 @@ jobs:
                   cache: "npm"
             - name: Install dependencies
               run: npm install
-            - name: Build and test
+            - name: Build server and client code
+              run: npm run build
+            - name: Run unit tests
               run: npm run test
             - name: Setup Pages
               uses: actions/configure-pages@v3
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v1
               with:
-                  # Upload dist repository
-                  path: "./dist"
+                  # Upload client repository
+                  path: "./dist/client"
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v1
