--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "tsc -p ./tsconfig.server.json && vite build",
         "preview": "vite preview",
-        "test": "tsc && vite build && jest"
+        "test": "vite build && jest",
+        "serve": "tsc -p tsconfig.server.json && node ./dist/server/index.js"
     },
     "dependencies": {
         "@fluentui/react-icons": "^2.0.201",
         "@tanstack/react-query": "^4.29.5",
         "dotenv": "^16.0.3",
+        "express": "^4.18.2",
         "openweathermap-ts": "^1.2.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -22,10 +24,12 @@
     },
     "devDependencies": {
         "@tanstack/react-query-devtools": "^4.29.6",
+        "@types/dotenv": "^8.2.0",
         "@types/jest": "^29.5.1",
         "@types/node": "^20.1.0",
         "@types/react": "^18.2.5",
         "@types/react-dom": "^18.2.4",
+        "@types/express": "^4.17.17",
         "@vitejs/plugin-react": "^4.0.0",
         "@vitejs/plugin-react-swc": "^3.0.0",
         "autoprefixer": "^10.4.14",
