--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-geolocated": "^4.0.3",
-        "react-loading-icons": "^1.1.0",
+        "react-loading-icons": "^1.1.0"
     },
     "devDependencies": {
         "@tanstack/react-query-devtools": "^4.29.6",
