Fix issues by using nested dist path

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc -p ./tsconfig.server.json && vite build",
         "preview": "vite preview",
         "serverdev": "nodemon",
-        "host": "tsc -p tsconfig.server.json && node ./dist/server/index.js"
+        "host": "tsc -p tsconfig.server.json && node ./dist-server/index.js"
     },
     "dependencies": {
         "dotenv": "^16.0.3",
