--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/server",
+        "outDir": "./dist-server",
         "target": "ESNext",
         "useDefineForClassFields": true,
         "lib": [ "ESNext" ],
