--- a/.github/workflows/host.yml
+++ b/.github/workflows/host.yml
@@ -45,7 +45,7 @@ jobs:
               uses: actions/upload-pages-artifact@v1
               with:
                   # Upload client repository
-                  path: "./dist/client"
+                  path: "./dist"
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v1
