--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -14,6 +14,6 @@
         "moduleResolution": "Node",
         "resolveJsonModule": true
     },
-    "include": ["./server"],
+    "include": ["./server/proxy"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
