--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,19 +1,14 @@
 {
     "compilerOptions": {
-        "outDir": "./dist-server",
         "target": "ESNext",
-        "useDefineForClassFields": true,
-        "lib": [ "ESNext" ],
-        "allowJs": false,
-        "skipLibCheck": true,
-        "esModuleInterop": false,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
         "module": "ESNext",
-        "moduleResolution": "Node",
-        "resolveJsonModule": true
+        "moduleResolution": "nodenext",
+        "strict": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "outDir": "./dist-server",
+        "rootDir": "./server"
     },
-    "include": ["./server"],
-    "exclude": ["node_modules", "**/*.spec.ts"]
+    "include": ["server/*.ts"],
+    "exclude": ["node_modules"]
 }
