--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,12 +3,13 @@
         "outDir": "./dist-server",
         "target": "ESNext",
         "useDefineForClassFields": true,
-        "lib": [ "ESNext" ],
+        "lib": ["ESNext"],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
+        "noImplicitAny": true,
         "forceConsistentCasingInFileNames": true,
         "module": "ESNext",
         "moduleResolution": "Node",
