--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,10 +2,9 @@
     "compilerOptions": {
         "target": "ESNext",
         "useDefineForClassFields": true,
-        "lib": [ "ESNext" ],
+        "lib": ["ESNext", "DOM"],
         "allowJs": false,
         "skipLibCheck": true,
-        "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "noImplicitAny": true,
