--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "nodemon": "^2.0.22",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-geolocated": "^4.1.0",
         "react-loading-icons": "^1.1.0"
     },
     "devDependencies": {
