--- a/.github/workflows/host.yml
+++ b/.github/workflows/host.yml
@@ -39,6 +39,8 @@ jobs:
               run: npm install
             - name: Build server and client code
               run: npm run build
+            - name: Package client dist
+              run: npm run package
             - name: Setup Pages
               uses: actions/configure-pages@v3
             - name: Upload artifact
