--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "react-weather",
+    "displayName": "React Weather",
     "private": true,
     "version": "0.0.0",
     "type": "module",
