--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
         "host": "tsc -p tsconfig.server.json && node ./dist/server/server.js"
     },
     "dependencies": {
+        "@fluentui/react-icons": "^2.0.201",
+        "@tanstack/react-query": "^4.29.11",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "nodemon": "^2.0.22",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dropdown": "^1.11.0",
         "react-geolocated": "^4.1.0",
-        "react-loading-icons": "^1.1.0",
-        "@fluentui/react-icons": "^2.0.201",
-        "@tanstack/react-query": "^4.29.11"
+        "react-loading-icons": "^1.1.0"
     },
     "devDependencies": {
         "@tanstack/react-query-devtools": "^4.29.11",
